Fixed issue with Date Obtained showing weird date. Added cropper to Outfit. Removed multiple image upload.

--- a/resources/sass/components/_cosplay-grid.scss
+++ b/resources/sass/components/_cosplay-grid.scss
@@ -73,6 +73,7 @@
       max-height: 400px;
       border: 1px solid rgba(0,0,0,0.15);
       border-bottom: none;
+      overflow: hidden;
 
       & img {
         height: 100%;
